--- a/exercicios/ex011/index.html
+++ b/exercicios/ex011/index.html
@@ -13,6 +13,7 @@
     <picture>
         <!--50px de margem para mais-->
         <!--Colocar os menos tamanhos sempre acima no código-->
+        <!--Base a imagem padrão e ir subindo os niveis de tamanho existentes-->
         <source media="(max-width: 750px)" srcset="imagens/p.png" type="image/png"> 
         <source media="(max-width: 1050px)" srcset="imagens/m.png" type="image/png">
         <img src="imagens/g.png" alt="Imagens dinamica">
