--- a/exercicios/ex011/index.html
+++ b/exercicios/ex011/index.html
@@ -18,6 +18,15 @@
         <source media="(max-width: 1050px)" srcset="imagens/m.png" type="image/png">
         <img src="imagens/g.png" alt="Imagens dinamica">
     </picture>
+
+    <h1>Reproduzindo Audios</h1>
+    <!--<audio src="midia/Read All Over - Nathan Moore.mp3" controls autoplay></audio>
+    MP3, WAV, DGG-->
+
+    <audio preload="metadata" autoplay controls>
+        <source src="midia/Read All Over - Nathan Moore.mp3" type="audio/mpeg">
+        <p>Caso seu navegador não consiga reproduzir esse audio, voc^we consegue encontra-lo <a href="https://www.youtube.com/watch?v=x3JoZ49kD4s" rel="external">clicando aqui</a></p>      
+    </audio>
   
 </body>
 </html>
