--- a/desafios/d009/paghtml.html
+++ b/desafios/d009/paghtml.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style> 
-        body{ 
-            background-color: rgb(23, 143, 255);
-            
-        }
-    </style>
+    <link rel="stylesheet" href="paghtml.css">
     <title>HTML</title>
 </head>
 <body>
     <h1>Curso de HTML</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/rsFCVjr5yxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank" rel="external">
+        <p>Veja o curso completo</p>
+    </a>
     <p><a href="index.html" rel="prev"><img src="imagens/voltar.png" alt="Botão de voltar"></a></p>
 </body>
 </html>
