--- a/desafios/d009/pagjs.html
+++ b/desafios/d009/pagjs.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style> 
-        body{ 
-            background-color: rgb(23, 143, 255);
-            
-        }
-    </style>
+    <link rel="stylesheet" href="pagjs.css">
     <title>JavaScript</title>
 </head>
 <body>
     <h1>Curso de JavaScript</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/BXqUH86F-kA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <p>Veja o curso completo</p>
+    <a href="https://www.youtube.com/watch?v=BXqUH86F-kA&list=PLntvgXM11X6pi7mW0O4ZmfUI1xDSIbmTm" target="blank" rel="external"><p>Veja o curso completo</p>
+    </a>
     <p><a href="index.html" rel="prev"><img src="imagens/voltar.png" alt="Botão de voltar"></a></p>
 </body>
 </html>
