--- a/desafios/d009/pagphyton.html
+++ b/desafios/d009/pagphyton.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style> 
-        body{ 
-            background-color: rgb(23, 143, 255);
-            
-        }
-    </style>
+    <link rel="stylesheet" href="pagphyton.css">
     <title>Phyton</title>
 </head>
 <body>
     <h1>Curso de Phyton</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <a href="https://www.youtube.com/watch?v=S9uPNppGsGo&list=PLvE-ZAFRgX8hnECDn1v9HNTI71veL3oW0" target="blank" rel="external"><p>Veja o curso completo</p>
+    </a>
     <p><a href="index.html" rel="prev"><img src="imagens/voltar.png" alt="Botão de voltar"></a></p>
 </body>
 </html>
