--- a/exercicios/ex016/index.html
+++ b/exercicios/ex016/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body{
+        background-image: linear-gradient(to top,#802660 44%, #BF3990,#FF4DC1);
+        background-attachment: fixed;   
+        }
+
+        h1{
+            color: #FFCA66;
+            font-weight: bolder;
+        }
+    </style>
     <title>Representando cores</title>
 </head>
-<body style="background-color: gray;">
+<body>
     <h1>Cores em css</h1>
     <p style="color: blue;">Cor configurada via nome</p>
     <p style="color: #0000FF">Cor configurada pelo código Hexadecimal</p>
