--- a/exercicios/ex016/index.html
+++ b/exercicios/ex016/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        *{
+            height: 100%;
+        }
         body{
         background-image: linear-gradient(to top,#802660 44%, #BF3990,#FF4DC1);
         background-attachment: fixed;   
